fix for overflow-x

--- a/assets/styles/need-to-organize.scss
+++ b/assets/styles/need-to-organize.scss
@@ -2,6 +2,7 @@
 #__layout {
     max-width: 100%;
     overflow-y: auto;
+    overflow-x: hiden;
   }
   pre {
     max-width: 100%;
